[EFL] Possibility to turn off accessibility feature for WebKit-EFL. https://bugs.webkit.org/show_bug.cgi?id=103036

Patch by Krzysztof Czech <k.czech@samsung.com> on 2012-12-12
Reviewed by Laszlo Gombos.

Guard dependencies for accessibility (ATK), so that they can be turned off.

.:

* Source/cmake/OptionsEfl.cmake:
* Source/cmake/WebKitFeatures.cmake:

Source/WebCore:

No new tests as there is no new functionality.

* PlatformEfl.cmake:
* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::AccessibilityObject):
* accessibility/AccessibilityObject.h:
(AccessibilityObject):

Tools:

* WebKitTestRunner/InjectedBundle/AccessibilityUIElement.h:
(AccessibilityUIElement):
* WebKitTestRunner/PlatformEfl.cmake:

Canonical link: https://commits.webkit.org/123030@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137475 268f45cc-cd09-0410-ab3c-d52691b4dbfc